--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
@@ -16,15 +15,11 @@
     "axios": "^1.6.2",
     "pinia": "^2.1.0",
     "vue": "^3.5.12",
-    "vue-i18n": "^9.8.0",
-    "vue-router": "^4.4.5",
-    "vue3-modal": "^0.1.6"
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.4",
-    "@types/node": "^20.17.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
@@ -36,16 +31,10 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-vue": "^9.29.1",
-    "globals": "^15.11.0",
-    "npm-run-all2": "^7.0.1",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "sass": "^1.69.0",
-    "terser": "^5.24.0",
     "typescript": "~5.6.0",
-    "typescript-eslint": "^8.11.0",
-    "unplugin-auto-import": "^0.17.2",
-    "unplugin-vue-components": "^0.25.2",
     "vite": "^5.4.10",
     "vue-tsc": "^2.1.6"
   },
