--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@vueuse/core": "^10.7.0",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue-3": "^0.5.1",
     "pinia": "^2.1.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
@@ -20,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/bootstrap": "^5.2.10",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
