--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
-  },
+    },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@vueuse/core": "^10.7.0",
@@ -18,10 +18,28 @@
     "bootstrap-vue-3": "^0.5.1",
     "pinia": "^2.1.0",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "connect-pg-simple": "^9.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-jsdoc-swagger": "^1.8.0",
+    "express-rate-limit": "^7.2.0",
+    "express-session": "^1.18.0",
+    "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
+    "path": "^0.12.7",
+    "pg": "^8.11.5",
+    "sanitize-html": "^2.13.0",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "chai": "^5.1.1",
+      "mocha": "^10.4.0",
+    "supertest": "^7.0.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/bootstrap": "^5.2.10",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
